--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -6,15 +6,26 @@
 		<tr valign='top'>
 			<td><img src="{{ user.avatar(128) }}"></td>
 			<td><h4>{{ user.pseudo }}'s profile</h4>
+
 				{% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
-				{% if user.pseudo == g.user.pseudo %}<a href="{{ url_for('edit') }}">Edit about me</a>{% endif %}
-				{% if user.last_seen %}<p>Last seen on {{ user.last_seen.date() }} at {{ user.last_seen.time() }} </p>{% endif %}	
+
+				{% if user.pseudo == g.user.pseudo %}<a href="{{ url_for('edit') }}">Edit about me</a>
+				{% elif g.user.is_following(user) %}<a href="{{ url_for('unfollow_user', nickname=user.pseudo) }}">Unfollow</a>
+				{% else %}<a href="{{ url_for('follow_user', nickname=user.pseudo) }}">Follow</a>
+				{% endif %}
+				
+				{% if user.last_seen %}<p>Last seen on {{ user.last_seen.date() }} at {{ user.last_seen.time() }}</p>
+				{% endif %}	
+
+				<p>{{ user.followers.count() }} followers</p>
+				
+
 			</td>
 		</tr>
 	</table>
 	<hr>
 	{% if posts %}
-		{% for post in posts %}
+		{% for post in posts.items %}
 		
 			{% include "post.html" %}
 				
