--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,19 +1,23 @@
 
 {% extends "base.html" %}
 {% block content %}
+    
     <form action="" method="POST" name="post">
         {{ form.hidden_tag() }}
         <p>Say something :</p>
         <p>{{ form.post }}</p>
         <p><input type="submit" value="Post!"></p>
     </form>
+    
     {% if posts %}          
-        {% for p in posts.items %}
-            <h4>{{ p.author.pseudo }}</h4>
-            <p>{{ p.body }}</p>
+        {% for post in posts.items %}
+
+            {% include "post.html" %}
             
         {% endfor%}
+        
         {% if posts.has_prev %}<a href="{{ url_for('index', page=posts.prev_num) }}">Newer</a>{%    else %}Newer{% endif %}
+        
         {% if posts.has_next %}<a href="{{ url_for('index', page=posts.next_num) }}">Older</a>{% else %}Older{% endif %}
     {% else %}
         <h4>No messages to display</h4>
@@ -30,7 +34,6 @@
         {% endif %}
     {% endwith %}
     
-
     
     </div>
 {% endblock %}
